# JerkLimitedMotion

./: .gitignore  CMakeLists.txt  README.md  WinCompiler.sh  graph.cpp  graph.h  imgui.ini  motion_log.txt  periodic.cpp  periodic.h  posgen.cpp  profiler.cpp  profiler.h  profiler_try.cpp  stb_easy_font.h
documents/: case4.drawio
